bad script tag in code.

--- a/_posts/0053. asciimathml.html
+++ b/_posts/0053. asciimathml.html
@@ -5,11 +5,12 @@ permalink: /~gb/blog/2006/10/07/asciimathml/
 tags: ''
 title: ASCIIMathML
 ---
+<script src="http://www.cs.unc.edu/~gb/ASCIIMathML.js"></script>
 <p><a href="http://www1.chapman.edu/~jipsen/asciimath.html">ASCIIMathML</a> is a great package by <a href="http://www1.chapman.edu/~jipsen/">Peter Jipsen</a> for including equations in web pages. It works great with WordPress.</p>
 
 <p><strike>I simply added</strike></p>
 
-<p><code><script type="text/javascript" src="/~gb/ASCIIMathML.js"></script></code></p>
+<p><code>&lt;script type="text/javascript" src="/~gb/ASCIIMathML.js"&gt;&lt;/script&gt;</code></p>
 
 <p><strike>to my Header.php.</strike></p>
 
