update on repair.

--- a/_posts/0081. driveway-alarm.html
+++ b/_posts/0081. driveway-alarm.html
@@ -14,3 +14,5 @@ title: Driveway alarm
 <p>Replaced east side battery on 26 January 2007 because of battery defect.
 Replaced both batteries on 7 May 2007. Alarm was still working but sounds twice for a single car when the battery is weak.
 Replaced east side battery on 2 Feb 2008, was sounding twice.</p>
+
+<p>In November of 2009, one of our units started randomly sounding at odd times. I contacted the company and was instructed to send it back. They returned a new one, at no charge! This is after nearly 5 years of service. What a great company!</p>
