--- a/_posts/1005.accessible-browser-games-using-spatial-sound.html
+++ b/_posts/1005.accessible-browser-games-using-spatial-sound.html
@@ -25,7 +25,7 @@ date: 2011/01/23 19:58:10
     <li>Sounds associated with cardinal directions. Hints in maze correspond to the sounds. At each intersection you hear a sound. The sound is your guide to which direction to choose next (Myst mini-game)</li>
     <li>Street crossing simulator</li>
     <li>A tea-party where the dishes come to life (like in Beauty and the Beast). The child has to catch the dishes and return them. Simple sound chase engine. </li>
-    <li>Michael suggests a spatial sound version of <a href="http://en.wikipedia.org/wiki/Simon_%28game%29">Simon</a>. I think Diane would really like this for teaching attention to sound direction.<li>
+    <li>Michael suggests a spatial sound version of <a href="http://en.wikipedia.org/wiki/Simon_%28game%29">Simon</a>. I think Diane would really like this for teaching attention to sound direction.</li>
     <li>Bug Stomp. "Oh no! Bugs got in the house! Help stamp them out but don't stomp too far away because they will run."</li>
     <li>Catch the leprechaun. Get gold for catching him, lose gold when you miss.</li> 
     <li>Maybe you could hunt down the number or word that that is the answer to a question.</li>
