--- a/_posts/1006.maze-day-2011.html
+++ b/_posts/1006.maze-day-2011.html
@@ -5,6 +5,9 @@ categories:
 tags: blind
 date: 2011/01/24 16:09:12
 ---
+
+<p>This year Maze Day will be 28 April 2011 from 9 till 2 in Sitterson Hall on the UNC Chapel Hill Campus.</p>
+
 <p>Maze Day is for visually impaired and blind students in grades K-12, their parents and teachers. Your students will enjoy fun and educational computer applications developed especially for them. UNC students will learn how well their accessible applications work with real users. And everyone will have a good time!</p>
 
 <p>We plan to have a wide variety of accessible fun, educational, and exercise activities. We will be especially featuring a new collection of games hosted on our web site and accessible from any computer connected to the internet.</p>
