--- a/_posts/1007.braille-game-ideas.html
+++ b/_posts/1007.braille-game-ideas.html
@@ -51,6 +51,6 @@ in an example.</p>
 
 <p>Other story lines might include: barn-yard animals, machines, and foods.</p>
 
-<p>My goal is getting kids making letters *AND* thinking about words at
+<p>My goal is getting kids making letters <b>AND</b> thinking about words at
 the same time.</p>
 
