--- a/_posts/1008.spatial-sound-game-ideas.html
+++ b/_posts/1008.spatial-sound-game-ideas.html
@@ -1,8 +1,8 @@
 ---
 title: Spatial sound game ideas 
 slug: spatial-sound-game-ideas
-categories: enabling technology, blind, ideas
-tags: 
+categories: 
+tags: enabling technology, blind, ideas, sound
 date: 2011/02/03 13:10:38
 ---
 <h3>Motivation</h3>
