--- a/_posts/1007.braille-game-ideas.html
+++ b/_posts/1007.braille-game-ideas.html
@@ -1,8 +1,8 @@
 ---
 title: Braille Game Ideas 
 slug: braille-game-ideas
-categories: enabling technology, blind, ideas
-tags: 
+categories: 
+tags: enabling technology, blind, ideas
 date: 2011/01/30 17:05:06
 ---
 <p>I think I see how to make the 
