Added a link to Dino Dodger.

--- a/_posts/1005.accessible-browser-games-using-spatial-sound.html
+++ b/_posts/1005.accessible-browser-games-using-spatial-sound.html
@@ -10,6 +10,7 @@ date: 2011/01/23 19:58:10
 <ol>
     <li>Asteroids like game where you spin to shoot incoming targets</li>
     <li>Duck-hunt like game where they fly by and you shoot them. Maybe there are ducks and geese with a limit on the number of one or the other that you can take so you have to be careful about what you shoot.</li>
+    <li><a href="http://gizmodo.com/#!5780845/about-time-that-someone-made-an-iphone-game-that-combines-jeeps-dinosaurs-and-poop">Dino Dodger</a> is an iOS game similar to Sonic Zoom. I think kids would have fun dodging dinosaurs and picking up eggs while avoiding poo. Lots of good sound opportunities there.</li>
     <li>Submariner game where you have to stealthily enter the harbor to collect intelligence while avoiding destroyers.</li>
     <li>Some 2D navigation game, I think kids could find targets in 2D using the spatial sound cues. Maybe treasure hunt?</li>
     <li>Barn-yard round up (like the game the guys built a few years ago with the rocking horse and wiimote for directional control). Use the arrow keys to turn and go forward. You find the animals by their sound.</li>
