--- a/_posts/0339. sourdough-wheat-bread.html
+++ b/_posts/0339. sourdough-wheat-bread.html
@@ -11,16 +11,16 @@ title: Sourdough Wheat Bread
 
 <p><ul>
 	<li>1 1/2 cups starter.</li>
-	<li>2 1/2 tbs. of butter cut into small cubes + enough milk to make 1 cup total. Warm this in the microwave, 30 seconds, stir, then heat 30 more seconds. I use the same measuring cup I used for the starter.</li>
-	<li>2 1/2 tbs. sugar</li>
+	<li>2 1/2 tbs. of butter cut into small cubes (or 1 ounce of Smart Balance) + enough milk to make 1 cup total. Warm this in the microwave, 30 seconds, stir, then heat 30 more seconds. I use the same measuring cup I used for the starter.</li>
+	<li>2 1/2 tbs. sugar or 1 ounce of honey</li>
 	<li>1 1/2 tsp. salt</li>
 	<li>2 cups while wheat flour</li>
 	<li>2 cups bread flour</li>
 </ul></p>
 
-<p>Return the remaining starter to the frig. I don't fool with it until the next time I bake.</p>
+<p>Return the remaining starter to the fridge. I don't fool with it until the next time I bake.</p>
 
-<p>Using the dough hook mix on speed 1 for 1 minute and then speed 2 for 4 minutes. It should form a nice dough that cleans the sides of the bowl. Remove the dough from the bowl, spray the bowl with PAM, and return the dough to the bowl to rise. Cover it with wax paper and allow it to rise at least until doubled. I've let it go as little as 2 hours and as long as 12 hours. Punch it down, shape into a loaf and put it in a bread pan. Allow it to rise for about 1 1/2 hours at 100 degrees or longer at room temperature until it is about one inch or so above the top of the pan. Bake at 325 convection for 32 minutes. Immediately remove from the pan and allow to cool on a rack.</p>
+<p>Using the dough hook mix on speed 1 for 1 minute and then speed 2 for 4 minutes. It should form a nice dough that cleans the sides of the bowl. Remove the dough from the bowl, spray the bowl with PAM, and return the dough to the bowl to rise. Cover it with wax paper and allow it to rise at least until doubled. I've let it go as little as 2 hours and as long as 12 hours. Punch it down, shape into a loaf and put it in a bread pan. Allow it to rise for about 1 1/2 hours at 100 degrees or longer at room temperature until it is about one inch or so above the top of the pan. Bake at 325 convection for 45 minutes. Immediately remove from the pan and allow to cool on a rack.</p>
 
 <p>When I make bread during the week, I stir up the starter, flour, and water in the evening and let it bubble all night. In the morning I make the dough and let it rise all day. Then when I get home from work, I punch it down, shape it, let it rise and bake it. It is cool enough by bed time to put away.</p>
 
