--- a/_posts/0339. sourdough-wheat-bread.html
+++ b/_posts/0339. sourdough-wheat-bread.html
@@ -14,7 +14,7 @@ title: Sourdough Wheat Bread
 	<li>2 1/2 tbs. of butter cut into small cubes (or 1 ounce of Smart Balance) + enough milk to make 1 cup total. Warm this in the microwave, 30 seconds, stir, then heat 30 more seconds. I use the same measuring cup I used for the starter.</li>
 	<li>2 1/2 tbs. sugar or 1 ounce of honey</li>
 	<li>1 1/2 tsp. salt</li>
-	<li>2 cups while wheat flour</li>
+	<li>2 cups whole wheat flour</li>
 	<li>2 cups bread flour</li>
 </ul></p>
 
@@ -24,5 +24,5 @@ title: Sourdough Wheat Bread
 
 <p>When I make bread during the week, I stir up the starter, flour, and water in the evening and let it bubble all night. In the morning I make the dough and let it rise all day. Then when I get home from work, I punch it down, shape it, let it rise and bake it. It is cool enough by bed time to put away.</p>
 
-<p>This recipe is a modification of one from "The Bread Machine Cookbook" by Donna Rathmell German.
+<p>This recipe is a modification of one from <a href="http://www.amazon.com/Bread-Machine-Cookbook-Rathmell-German/dp/1558672966">The Bread Machine Cookbook</a> by Donna Rathmell German.
 </p>
