--- a/_posts/0655. making-jslint-work-on-ubuntu-lucid.html
+++ b/_posts/0655. making-jslint-work-on-ubuntu-lucid.html
@@ -9,10 +9,10 @@ title: Making jslint work on Ubuntu Lucid
 
 <p>Tons of searching revealed that some of the Launchpad folks had done the necessary incantations to make it work.  I did:</p>
 
-<p><code>
+<p><pre>
 sudo add-apt-repository ppa:launchpad/ppa
 sudo apt-get update
 sudo apt-get install spidermonkey-bin
-</code></p>
+</pre></p>
 
 <p>On the way I found this nice python wrapper for jslint to replace the perl one I had found. Check out <a href="http://github.com/FND/jslint-cli">jslint-cli</a>.</p>
